add fixes and querys
