# src/application/api/product.controller.ts
@@ -1,5 +1,13 @@
-import { Controller, Get, Param, ParseIntPipe } from '@nestjs/common';
-import { ApiOkResponse, ApiTags } from '@nestjs/swagger';
+import {
+  Controller,
+  Get,
+  Param,
+  ParseIntPipe,
+  Query,
+  UsePipes,
+  ValidationPipe,
+} from '@nestjs/common';
+import { ApiOkResponse, ApiQuery, ApiTags } from '@nestjs/swagger';
 
 import { ProductService } from 'src/core/service/product.service';
 
@@ -11,9 +19,15 @@ export class ProductController {
   constructor(private readonly productService: ProductService) {}
 
   @Get()
+  @UsePipes(new ValidationPipe({ transform: true }))
+  @ApiQuery({ name: 'category', type: Number, required: false })
+  @ApiQuery({ name: 'search', type: 'string', required: false })
   @ApiOkResponse({ type: Array<ProductDto> })
-  async findManyProducts() {
-    const data = await this.productService.findManyProducts();
+  async findManyProducts(
+    @Query('category') category?: number,
+    @Query('search') search?: string,
+  ) {
+    const data = await this.productService.findManyProducts(category, search);
     return {
       message: 'Products founded',
       data,
@@ -23,7 +37,7 @@ export class ProductController {
   @Get('categories/:id')
   @ApiOkResponse({ type: Array<ProductDto> })
   async findManyProductsByCategory(@Param('id', ParseIntPipe) id: number) {
-    const data = await this.productService.findManyProducts();
+    const data = await this.productService.findManyProductsByCategory(id);
     return {
       message: `Products founded by category ${id}`,
       data,
